# cce-rust

./: .editorconfig  .gitignore  ADR-CORPUS-SERVE.md  ADR-CORPUS-TRUST.md  ADR-SEMANTIC-INDEX.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD-SPEC.md  GOVERNANCE.md  MAINTAINERS.md  README.md  RELEASING.md  SECURITY.md  SPEC-DOCSWEEP.md  SPEC-MCP.md  SPEC-SYNC-KNOWLEDGE.md  SPEC-SYNC-RECONCILE.md  SPEC-SYNC.md  SPEC-USAGE-VISIBILITY.md  SPEC-V2.1.md  SPEC-V2.2.md  SPEC-V2.5-SAVINGS.md  SPEC-V2.md  SPEC.md  SUPPORT.md  conformance.json  llms.txt  n  rustfmt.toml  t
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARKS.md  DECISIONS.md  TDD.md  TIMING.md  VERIFIED.md  adding-a-language.md  architecture.md  dashboard.md  getting-started.md  how-it-works.md  how-to.md  knowledge-ask.md  knowledge.md  mcp.md  relevance.md  savings.md  sync.md  workspace.md
docs/ci/: cce-knowledge-sync.yml  cce-sync.yml
docs/presentation/: index.html  walkthrough.cast
eval/: BASELINE.md  README.md  questions.jsonl  run-claude.sh  run.sh  runs.example.jsonl  runs.jsonl
eval/knowledge/: ask.jsonl  corpus.knowledge.jsonl
eval/relevance/: code.jsonl  docs.jsonl
eval/relevance/docs-corpus/: deploy-checklist.md  rate-limiting.md  retry-policy.md  search-tuning.md
path/src/mcp/: mod.rs  server.rs
path/tests/: mcp.rs
path/to/src/sync/: config.rs
path/to/tests/: sync.rs
scripts/: check-doc-test-count.sh
src/: aggregator.rs  atomic.rs  bench.rs  chunker.rs  compress.rs  config.rs  conformance.rs  corpus.rs  dashboard.rs  doctor.rs  embedder.rs  eval.rs  federation.rs  fingerprint.rs  grammar.rs  graph_store.rs  keyword_store.rs  lib.rs  main.rs  markdown.rs  memory.rs  metrics.rs  pricing.json  pricing.rs  redactor.rs  relevance.rs  retriever.rs  savings.rs  sensitive.rs  session.rs  stats.rs  store.rs  tokenizer.rs  update.rs  usage.rs  vector_store.rs  walker.rs  workspace.rs
src/knowledge/: ask.rs  contract.rs  manifest.rs  mod.rs  retrieval.rs  store.rs
src/mcp/: init.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/packs/: c.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs  validators.rs
src/sync/: artifact.rs  commands.rs  config.rs  git.rs  knowledge_artifact.rs  knowledge_commands.rs  mod.rs  remote.rs
test/fixture/: README.md
test/fixture/base/: auth.py  metrics_sample.jsonl  payments.py
test/fixture/compress/: c.c  javascript.js  python.py  ruby.rb  rust.rs  typescript.ts
test/fixture/compress/containers/: c.c  javascript.js  python.py  ruby.rb  rust.rs  typescript.ts
test/fixture/knowledge/: ask.golden.json  curated.jsonl
test/fixture/markdown/: code_fence.md  nested.md  oversized.md  preamble.md
test/fixture/relevance/: code.golden.json
test/fixture/samples/: c.c  javascript.js  notes.md  python.py  ruby.rb  rust.rs  typescript.ts
test/fixture/savings/: grammar_compact.txt  grammar_verbose_baseline.txt  token_corpus.json
test/fixture/update/: CHANGELOG.md
test/fixture/usage/: metrics_usage.jsonl
test/fixture/workspace/app/: Gemfile
test/fixture/workspace/app/app/models/: charge.rb
test/fixture/workspace/app/config/: application.rb
test/fixture/workspace/engines/billing/: billing.gemspec
test/fixture/workspace/engines/billing/lib/: billing.rb
test/fixture/workspace/engines/billing/lib/billing/: engine.rb
test/fixture/workspace/web/: package.json
test/fixture/workspace/web/src/: index.ts
tests/: cli.rs  compress_golden.rs  corpus_serve.rs  dashboard.rs  deep_nesting.rs  knowledge_ask_cli.rs  knowledge_feed_manifest.rs  knowledge_ingest.rs  knowledge_search.rs  knowledge_sync.rs  language_packs.rs  markdown_golden.rs  mcp.rs  mcp_footer.rs  metrics_cli.rs  ollama.rs  property_chunkers.rs  relevance_cli.rs  savings_cli.rs  secrets.rs  sync.rs  update.rs  usage_cli.rs  workspace.rs
