[package]
name = "cce"
version = "2.0.0"
edition = "2021"
description = "Code Context Engine — Rust implementation (SPEC v1.0 + Dashboard v1.1 + Language Packs v2.0)"
license = "MIT"

[[bin]]
name = "cce"
path = "src/main.rs"

[lib]
name = "cce"
path = "src/lib.rs"

[dependencies]
# tree-sitter core, pinned. All grammar crates below share the same
# `tree-sitter-language` (0.1.x) ABI as this core, so they are interchangeable.
tree-sitter = "=0.26.10"
# One grammar crate per language pack (SPEC-V2 §2), each pinned.
tree-sitter-python = "=0.25.0"
tree-sitter-javascript = "=0.25.0"
tree-sitter-ruby = "=0.23.1"
tree-sitter-rust = "=0.24.2"
tree-sitter-typescript = "=0.23.2"
tree-sitter-c = "=0.24.2"
sha2 = "=0.11.0"
walkdir = "=2.5.0"
clap = { version = "=4.6.1", features = ["derive"] }
ureq = { version = "=3.3.0", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"

[profile.release]
opt-level = 3

[dev-dependencies]
tempfile = "=3.27.0"
