[package]
name = "cce"
version = "2.6.2"
edition = "2021"
description = "Code Context Engine — Rust implementation (SPEC v1.0 + Dashboard v1.1 + Language Packs v2.0 + Secret Protection v2.1 + Workspace Mode v2.2 + CCE Sync v2.3 + CCE MCP v2.4 + Dashboard refresh & docs sweep v2.4.1 + Savings Layers v2.5.0–v2.5.4: chunk/output/grammar compression, memory, turn summarization, progressive disclosure, the seven-bucket savings ledger and nine MCP tools + v2.5.5 documentation sweep)"
license = "MIT"

[[bin]]
name = "cce"
path = "src/main.rs"

[lib]
name = "cce"
path = "src/lib.rs"

[dependencies]
# tree-sitter core, pinned. All grammar crates below share the same
# `tree-sitter-language` (0.1.x) ABI as this core, so they are interchangeable.
tree-sitter = "=0.26.10"
# One grammar crate per language pack (SPEC-V2 §2), each pinned.
tree-sitter-python = "=0.25.0"
tree-sitter-javascript = "=0.25.0"
tree-sitter-ruby = "=0.23.1"
tree-sitter-rust = "=0.24.2"
tree-sitter-typescript = "=0.23.2"
tree-sitter-c = "=0.24.2"
sha2 = "=0.11.0"
walkdir = "=2.5.0"
clap = { version = "=4.6.1", features = ["derive"] }
ureq = { version = "=3.3.0", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
# High-confidence secret redaction patterns (SPEC-V2.1 §1, Layer 2), pinned.
regex = "=1.12.4"
# YAML parsing for the workspace manifest (SPEC-V2.2 §2), pinned. Reading only —
# the manifest is emitted by a hand-rolled canonical writer for byte-determinism.
serde_yaml = "=0.9.34"
# Standard RFC-4648 base64 for the CCE Sync artifact's embedding encoding
# (SPEC-SYNC §2: base64 of 256 little-endian IEEE-754 f64 bytes), pinned. The
# standard alphabet + padding guarantees byte-identical output across engines.
base64 = "=0.22.1"
# Markdown grammar for the knowledge heading-chunker (SPEC-V2.6 §2), pinned. Shares
# the same `tree-sitter-language` (0.1.x) ABI as the tree-sitter core above, so it is
# interchangeable. Used ONLY by the knowledge ingest — the code index never registers
# it, so `conformance.json` and the Sync golden stay byte-identical (SPEC-V2.6 §1.2).
tree-sitter-md = "=0.5.3"

[profile.release]
opt-level = 3

[dev-dependencies]
tempfile = "=3.27.0"
